# backend/docs/swagger.json
@@ -1659,74 +1659,6 @@
 				]
 			}
 		},
-		"/hello": {
-			"get": {
-				"operationId": "GetHelloWorld",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"properties": {
-										"timestamp": {
-											"type": "string"
-										},
-										"message": {
-											"type": "string"
-										}
-									},
-									"required": [
-										"timestamp",
-										"message"
-									],
-									"type": "object"
-								}
-							}
-						}
-					}
-				},
-				"tags": [
-					"Hello World"
-				],
-				"security": [],
-				"parameters": []
-			}
-		},
-		"/hello/create": {
-			"get": {
-				"operationId": "CreateHelloWorld",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"properties": {
-										"timestamp": {
-											"type": "string"
-										},
-										"message": {
-											"type": "string"
-										}
-									},
-									"required": [
-										"timestamp",
-										"message"
-									],
-									"type": "object"
-								}
-							}
-						}
-					}
-				},
-				"tags": [
-					"Hello World"
-				],
-				"security": [],
-				"parameters": []
-			}
-		},
 		"/gemini/health": {
 			"get": {
 				"operationId": "Health",
